# claudefiles

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  NEXT_STEPS.md  README.md  SESSION-CHECKLIST.md  agents  bootstrap.sh  install.sh  manifest.toml  migrate.sh  scrape_vercel_com.py
tools/python/: pyproject.toml
tools/python/src/af/: agent_knowledge.py  agents.py  archetype.py  audit.py  browser.py  caveman.py  check.py  context.py  hub.py  includes.py  index.py  init.py  install.py  learn.py  lessons.py  lib.py  log.py  main.py  metrics.py  mode.py  note.py  plan_exec.py  plan_exec_cli.py  plan_scaffold.py  preview.py  read.py  repo.py  research.py  routes.py  screenshot.py  search.py  secrets.py  session.py  setup.py  skill_find.py  skill_usage.py  status.py  terminal.py  test_skill.py  tools_cmd.py  (+7 more)
tools/python/src/cf/: agents.py  browser.py  check.py  context.py  github.py  index.py  init.py  install.py  lib.py  log.py  main.py  note.py  preview.py  read.py  routes.py  screenshot.py  search.py  setup.py  status.py  tools_cmd.py  tree.py  versions.py  worktree.py
tools/python/tests/: conftest.py  test_audit.py  test_check.py  test_check_modes.py  test_check_plans.py  test_cli_smoke.py  test_context.py  test_hook_types.py  test_includes.py  test_init.py  test_install.py  test_install_scripts_parity.py  test_learn.py  test_lib.py  test_mode.py  test_note.py  test_plan_exec.py  test_plan_exec_cli.py  test_plan_scaffold.py  test_setup.py  test_status.py  test_test_skill.py  test_versions.py  test_webscraper.py
tools/python/tests/fixtures/: plan_example.yaml
(+625 files in other folders)
