[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "af"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "websocket-client>=1.6",
]

[project.scripts]
af = "af.main:_run"

[tool.hatch.build.targets.wheel]
packages = ["src/af"]
include = ["src/af/data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
